// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bash basic usage: Bash 1`] = `
"set -e
eval "$(fnm env --log-level='info')"
fnm install v8.11.3
fnm use v8.11.3
if [ "$(node --version)" != "v8.11.3" ]; then
  echo "Expected to get v8.11.3. Got $(node --version)"
  exit 1
fi"
`;

exports[`Bash nvmrc: Bash 1`] = `
"set -e
eval "$(fnm env --log-level='info')"
fnm install
fnm use
if [ "$(node --version)" != "v8.11.3" ]; then
  echo "Expected to get v8.11.3. Got $(node --version)"
  exit 1
fi"
`;

exports[`Bash use on cd: Bash 1`] = `
"set -e
eval "$(fnm env --use-on-cd --log-level='info')"
fnm install v8.11.3
fnm install v12.22.12
cd subdir
if [ "$(node --version)" != "v12.22.12" ]; then
  echo "Expected to get v12.22.12. Got $(node --version)"
  exit 1
fi"
`;

exports[`Fish basic usage: Fish 1`] = `
"fnm env --log-level='info' | source
fnm install v8.11.3
fnm use v8.11.3
if test (node --version) != "v8.11.3"
  echo "Expected to get v8.11.3. Got $(node --version)"
  exit 1
end"
`;

exports[`Fish nvmrc: Fish 1`] = `
"fnm env --log-level='info' | source
fnm install
fnm use
if test (node --version) != "v8.11.3"
  echo "Expected to get v8.11.3. Got $(node --version)"
  exit 1
end"
`;

exports[`Fish use on cd: Fish 1`] = `
"fnm env --use-on-cd --log-level='info' | source
fnm install v8.11.3
fnm install v12.22.12
cd subdir
if test (node --version) != "v12.22.12"
  echo "Expected to get v12.22.12. Got $(node --version)"
  exit 1
end"
`;

exports[`PowerShell basic usage: PowerShell 1`] = `
"$ErrorActionPreference = "Stop"
fnm env --log-level='info' | Out-String | Invoke-Expression
fnm install v8.11.3
fnm use v8.11.3
if ( "$(node --version)" -ne "v8.11.3" ) { echo "Expected to get v8.11.3. Got $(node --version)"; exit 1 }"
`;

exports[`PowerShell nvmrc: PowerShell 1`] = `
"$ErrorActionPreference = "Stop"
fnm env --log-level='info' | Out-String | Invoke-Expression
fnm install
fnm use
if ( "$(node --version)" -ne "v8.11.3" ) { echo "Expected to get v8.11.3. Got $(node --version)"; exit 1 }"
`;

exports[`PowerShell use on cd: PowerShell 1`] = `
"$ErrorActionPreference = "Stop"
fnm env --use-on-cd --log-level='info' | Out-String | Invoke-Expression
fnm install v8.11.3
fnm install v12.22.12
cd subdir
if ( "$(node --version)" -ne "v12.22.12" ) { echo "Expected to get v12.22.12. Got $(node --version)"; exit 1 }"
`;

exports[`Windows Command Prompt basic usage: Windows Command Prompt 1`] = `
"FOR /f "tokens=*" %i IN ('fnm env --log-level='info'') DO CALL %i
fnm install v8.11.3
fnm use v8.11.3
node --version | findstr v8.11.3
if %errorlevel% neq 0 (
  echo Expected to get v8.11.3
  exit 1
)"
`;

exports[`Windows Command Prompt nvmrc: Windows Command Prompt 1`] = `
"FOR /f "tokens=*" %i IN ('fnm env --log-level='info'') DO CALL %i
fnm install
fnm use
node --version | findstr v8.11.3
if %errorlevel% neq 0 (
  echo Expected to get v8.11.3
  exit 1
)"
`;

exports[`Windows Command Prompt use on cd: Windows Command Prompt 1`] = `
"FOR /f "tokens=*" %i IN ('fnm env --use-on-cd --log-level='info'') DO CALL %i
fnm install v8.11.3
fnm install v12.22.12
cd subdir
node --version | findstr v12.22.12
if %errorlevel% neq 0 (
  echo Expected to get v12.22.12
  exit 1
)"
`;

exports[`Zsh basic usage: Zsh 1`] = `
"set -e
eval "$(fnm env --log-level='info')"
fnm install v8.11.3
fnm use v8.11.3
if [ "$(node --version)" != "v8.11.3" ]; then
  echo "Expected to get v8.11.3. Got $(node --version)"
  exit 1
fi"
`;

exports[`Zsh nvmrc: Zsh 1`] = `
"set -e
eval "$(fnm env --log-level='info')"
fnm install
fnm use
if [ "$(node --version)" != "v8.11.3" ]; then
  echo "Expected to get v8.11.3. Got $(node --version)"
  exit 1
fi"
`;

exports[`Zsh use on cd: Zsh 1`] = `
"set -e
eval "$(fnm env --use-on-cd --log-level='info')"
fnm install v8.11.3
fnm install v12.22.12
cd subdir
if [ "$(node --version)" != "v12.22.12" ]; then
  echo "Expected to get v12.22.12. Got $(node --version)"
  exit 1
fi"
`;
